Small tweaks